# stoltit-rust-demo

./: .env  Cargo.toml  README.MD  docker-compose.yaml
db_seeds/: stoltit.sql
src/: config.rs  main.rs
src/http/: mod.rs  persons.rs
