[package]
name = "rest-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.7"
clap = { version = "3.2.21", features = ["derive", "env"] }
dotenvy = "0.15.6"
tokio = { version = "1.*", features = ["full"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls", "postgres", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
axum-macros = "0.2.3"
tower-http = { version = "0.3.4", features = ["trace", "cors"] }
axum-xml = "0.2.0"
cached = "0.42.0"
